# py-alexa

./: .travis.yml  MANIFEST.in  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
py_alexa/api/: intents_schema.py  validation.py
py_alexa_tests/: test_intents_schema.py  test_response_builder.py  test_validators.py
