[bdist_wheel]
universal=1

[flake8]
ignore = E121,E122,E123,E124,E125,E126,E127,E128,E129,E131,E501,E701
exclude = py_alexa_tests/*
format = pylint

[metadata]
name = py-alexa
author = Kyle Rockman
author_email = ['kyle.rockman@mac.com']
summary = A shared Library for use in writing Alexa Skills Kit integrations for other frameworks
url = https://github.com/rocktavious/py-alexa
description = * Documentation: https://github.com/rocktavious/py-alexa
license-file = LICENSE
classifiers =
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2 :: Only

[files]
packages =
    py_alexa

[pbr]
warnerrors = True